@@ -37,7 +37,8 @@ attribute of the <code>&lt;project&gt;</code> tag.
 To make Ant use
 a build file other than <code>build.xml</code>, use the command-line
 option <nobr><code>-buildfile <i>file</i></code></nobr>,
-where <i>file</i> is the name of the build file you want to use.</p>
+where <i>file</i> is the name of the build file you want to use
+(or a directory containing a <code>build.xml</code> file).</p>
 If you use the <nobr><code>-find [<i>file</i>]</code></nobr> option,
 Ant will search for a build file first in the current directory, then in
 the parent directory, and so on, until either a build file is found or the root
